# AudioSynth

./: .gitignore  1_DevelopWin64_with_gitbash.bat  2_DevelopWin64_with_conemu.bat  CMakeLists.txt  README.md  build_linux_debug_shared.sh  build_linux_release_shared.sh  build_linux_release_shared_icc.sh  build_m3_win_debug_shared.sh  build_m3_win_debug_static.sh  build_m3_win_release_shared.sh  build_m3_win_release_static.sh  build_win_debug_static.sh  build_win_relwithdebinfo_shared.sh  build_win_relwithdebinfo_static.sh  clean_bin.sh  clean_build.sh  m3.bat  wx1.txt  wx2.txt
src/: AbletonLive-qt.7z  AbletonLive64-Lite-qt-blah.7z  AbletonLive64-Lite-qt.7z  AbletonLivePluginScanner-qt.7z  AudioRecorder-qt.7z  AudioSynth-qt.7z  CMakeLists.txt  DSP_Compressor.txt  brickVST.7z  convert2mp3.7z  extractCoverArt_ffmpeg.7z  fontview-qt.7z  libDarkAudioDSP.7z  paint42-qt.7z  vst3-plugin-again.7z
src/AbletonLive-qt/: CMakeLists.txt
src/AbletonLive-qt/src/: main_Live-qt.cpp
src/AbletonLive64-Lite-qt/: CMakeLists.txt  TODO.txt  icon.rc
src/AbletonLive64-Lite-qt/src/: App.cpp  App.hpp  BeatGrid.hpp  Clips.hpp  Driver.cpp  Driver.hpp  LiveCommon.hpp  LiveData.hpp  LiveSkin.cpp  LiveSkin.hpp  main_Live-qt.cpp
src/AbletonLive64-PluginScanner-qt/: CMakeLists.txt
src/AbletonLive64-PluginScanner-qt/src/: ComInit.hpp  PluginDir.hpp  PluginInfo.hpp  PluginScanner.cpp  PluginScanner.hpp  PluginScannerRunnable.cpp  PluginScannerRunnable.hpp  main_PluginScanner-qt.cpp
src/AbletonLivePluginScanner-qt/: CMakeLists.txt
src/AbletonLivePluginScanner-qt/src/: GetPluginInfo.cpp  GetPluginInfo.hpp  GetPluginInfoList.cpp  GetPluginInfoList.hpp  PluginInfoList.hpp  main_AbletonLivePluginScanner-qt.cpp
src/AudioRecorder-qt/: CMakeLists.txt
src/AudioRecorder-qt/doc/: GADSR.cpp  GADSR.hpp  GAudioRecorder.cpp  GBassBoost.cpp  GCompressor.cpp  GDelay.cpp  GGroupV.cpp  GLFO.cpp  GLevelMeter.cpp  GLimiter.cpp  GLoudnessLFO.hpp  GOverdrive.hpp  GPianoKeyboard.cpp  GSliderV.cpp  GSpektrometer.cpp  GSpektrometer.hpp  ShiftMatrix.hpp
src/AudioRecorder-qt/src/: Common.hpp  MainWindow.cpp  MainWindow.hpp
src/AudioSynth-qt/: CMakeLists.txt  icon.rc
src/AudioSynth-qt/src/: GAudioRecorder.hpp  GBassBoost.hpp  GCompressor.hpp  GDelay.hpp  GLFO.hpp  GLimiter.hpp  GLowPass3.hpp  GOszilloskop.cpp  GOszilloskop3D.cpp  GOszilloskop3D.hpp  GOverdrive.cpp  GPan.cpp  GPan.hpp  GPianoKeyboard.hpp  GSoundTouch.cpp  GSoundTouch.hpp  GVerticalText.hpp  GVolume.cpp  GVolume.hpp  MainWindow.cpp  MainWindow.hpp  main_AudioSynth-qt.cpp  parseQtKey.hpp
src/BenMath/: CMakeLists.txt
src/BenMath/src/: main_BenMath.cpp
src/CaptureScreen-fltk/: CMakeLists.txt
src/CaptureScreen-fltk/res/: resource.rc
src/CaptureScreen-fltk/src/: main_captureScreen.cpp
src/CaptureScreen-wx/: CMakeLists.txt
src/CaptureScreen-wx/res/: CaptureScreen.ico.xpm  CaptureScreen.ico_entry1_64x64_32.tga  CaptureScreen.ico_entry2_48x48_32.tga  CaptureScreen.ico_entry3_40x40_32.tga  CaptureScreen.ico_entry4_32x32_32.tga  CaptureScreen.ico_entry5_24x24_32.tga  CaptureScreen.ico_entry6_20x20_32.tga  CaptureScreen.ico_entry7_16x16_32.tga  FXSST_9018.ico.xpm  FXSST_9018.ico_entry15_128x128_32.tga  FXSST_9018.ico_entry16_96x96_32.tga  FXSST_9018.ico_entry17_64x64_32.tga  FXSST_9018.ico_entry18_48x48_32.tga  FXSST_9018.ico_entry19_32x32_32.tga  FXSST_9018.ico_entry20_24x24_32.tga  FXSST_9018.ico_entry21_16x16_32.tga  HelpPane_1_107.ico.xpm  HelpPane_1_107.ico_entry10_256x256_32.tga  HelpPane_1_107.ico_entry11_48x48_32.tga  HelpPane_1_107.ico_entry12_32x32_32.tga  HelpPane_1_107.ico_entry13_24x24_32.tga  HelpPane_1_107.ico_entry14_20x20_32.tga  HelpPane_1_107.ico_entry15_16x16_32.tga  RsCRIcon_1_3031.ico_entry0_256x256_32.tga  RsCRIcon_1_3031.ico_entry1_128x128_32.tga  RsCRIcon_1_3031.ico_entry2_96x96_32.tga  RsCRIcon_1_3031.ico_entry3_48x48_32.tga  RsCRIcon_1_3031.ico_entry4_32x32_32.tga  RsCRIcon_1_3031.ico_entry5_32x32_32.tga  RsCRIcon_1_3031.ico_entry6_24x24_32.tga  RsCRIcon_1_3031.ico_entry7_16x16_32.tga  SnippingTool_166.ico.xpm  SnippingTool_166.ico_entry2_24x24_32.tga  SnippingTool_166.ico_entry3_20x20_32.tga  SnippingTool_166.ico_entry4_16x16_32.tga  accessibilitycpl_1_321.ico.xpm  accessibilitycpl_1_321.ico_entry19_96x96_32.tga  accessibilitycpl_1_321.ico_entry20_72x72_32.tga  accessibilitycpl_1_321.ico_entry21_64x64_32.tga  accessibilitycpl_1_321.ico_entry22_60x60_32.tga  (+33 more)
src/CaptureScreen-wx/src/: App.cpp  App.h  Frame.cpp  Frame.h  SnipWindow.cpp  SnipWindow.h
src/CaptureScreen/res/: resource.rc
src/HexEdit-qt/: CMakeLists.txt
src/HexEdit-qt/src/: Benni.hpp  MainWindow.cpp  MainWindow.hpp  QFont5x8.cpp  QFont5x8.hpp  QHexViewer.cpp  QHexViewer.hpp  main_HexEdit-qt.cpp
src/Hypnotoad/: CMakeLists.txt
src/Hypnotoad/src/: main_hypnotoad_glfw.cpp
src/MidiParser/: CMakeLists.txt
src/MidiParser/src/: main_MidiParser.cpp
src/_libs/: CMakeLists.txt  de-expat-2.2.9.7z  de-fltk-1.3.5.7z  de-glad.7z  de-glfw-3.3.2.7z  de-sqlite3.7z
src/_libs/_libsDarkAudio/: CMakeLists.txt  de-amrnb-11.0.0.0.7z  de-amrwb-11.0.0.0.7z  de-faac-1.29.9.2.7z
src/_libs/_libsDarkGPU/: CMakeLists.txt  de-irrExt-1.8.5.7z  de-irrlicht-1.8.5.7z
src/benni2console/: CMakeLists.txt
src/bh/: CMakeLists.txt
src/bh/res/: resource.rc
src/captureScreen/: CMakeLists.txt  icon.rc
src/color-console/: CMakeLists.txt
src/convert2mp3/: CMakeLists.txt
src/convertImage/: CMakeLists.txt
src/de-id3v2/: CMakeLists.txt
src/fontview-qt/: CMakeLists.txt  icon.rc
src/img2console/: CMakeLists.txt
src/img2cout/: CMakeLists.txt
src/img2dc/: CMakeLists.txt
src/libDarkAudio/: CMakeLists.txt
src/libDarkGPU/: CMakeLists.txt
src/libDarkImage/: CMakeLists.txt
src/libDarkVLC/: CMakeLists.txt
src/minimal_vst2x_host/: CMakeLists.txt  icon.rc
src/tools/: CMakeLists.txt
src/vlc-qt/: CMakeLists.txt  VLC_Display.cpp  VLC_Display.hpp  VLC_Window.cpp  VLC_Window.hpp  embedded_fontawesome463_ttf.hpp  main_vlc_qt.cpp
src/win32_drawing/: CMakeLists.txt
src/wxIrrlicht/: Frame.cpp  Frame.h  IrrlichtControl.cpp  IrrlichtControl.h  main.cpp  main.h  resource.rc
(+815 files in other folders)
